fix some http responses
