# src/infrastructure/rest-api/dto/GetEventHttpResponse.ts
@@ -1,0 +1,7 @@
+export interface GetEventsHttpResponse {
+	id: string;
+	aggregate_id: string;
+	event_type: string;
+	version: number;
+	payload: any;
+}
